--- a/www/styles/mapa.css
+++ b/www/styles/mapa.css
@@ -1,8 +1,8 @@
-﻿        #map {
+﻿        /*#map {
             font-family: sans-serif;
             background: #fff;
             color: #444;
             height: 100%;
             padding: 0;
             margin: 0;
-        }
+        }*/
