--- a/www/styles/style.css
+++ b/www/styles/style.css
@@ -21,7 +21,8 @@
 }
 
 .page-sidebar{
-	background-image:url(../images/misc/menu-bg.png);
+	/*background-image:url(../images/misc/menu-bg.png);*/
+    background-color:#0489B1;
 	background-repeat:repeat;
 	background-size:75px 75px;
 	width:274px;
@@ -47,7 +48,7 @@
 /*Content Controls*/
 
 .sidebar-shortcuts{
-	background-color:#1e1e1e;
+	background-color:#0489B1;
 	height:50px;	
 	border-bottom:solid 1px #2a2a2a;
 }
@@ -151,12 +152,12 @@
 .nav-submenu a:hover{	background-color:rgba(255,255,255,0.05);}
 
 .nav-item{
-	opacity:0.9;
+	opacity:1.0;
 	background-position:20px 15px;
 	background-size:25px 25px;
 	background-repeat:no-repeat;
 	color:#FFFFFF;
-	font-size:11px;
+	font-size:15px;
 	padding-left:60px;
 	line-height:55px;	
 	font-weight:300;
@@ -218,7 +219,8 @@
 	position:fixed;
 	height:51px;
 	width:100%;
-	background-image:url(../images/misc/menu-bg.png);
+     background-color:#0489B1;
+	/*background-image:url(../images/misc/menu-bg.png);*/
 	margin-bottom:30px;
 }
 
