--- a/www/styles/style.css
+++ b/www/styles/style.css
@@ -1,4 +1,11 @@
 ﻿@charset "utf-8";
+
+@import url(https://fonts.googleapis.com/css?family=Philosopher:700&subset=latin,cyrillic);
+
+@font-face {
+    font-family: 'LilyUPC';
+    src: url('fonts/upcll.ttf') format('truetype');
+}
 /* CSS Document */
 
 .all-elements{
@@ -6,7 +13,7 @@
 }
 
 .page-content{
-	background-color:#FFFFFF;
+	background-color:#0489B1;
 	z-index:10;
 	display:block;
 	min-height:1000px;
@@ -18,6 +25,11 @@
 	margin-bottom:0px;
 	padding:20px;
 	padding-bottom:15px;
+}
+
+
+.preloader {
+    background-color:#0489B1;
 }
 
 .page-sidebar{
@@ -36,6 +48,33 @@
 	position:fixed;
 }
 
+
+.input-label{
+	opacity:1.0;
+	background-position:20px 15px;
+	background-size:25px 25px;
+	background-repeat:no-repeat;
+	color:#FFFFFF;
+	font-size:18px;
+	/*padding-left:30px;*/
+	line-height:55px;	
+	font-weight:300;
+	letter-spacing:1px;
+}
+
+.input-label-header{
+	opacity:1.0;
+	background-position:20px 15px;
+	background-size:25px 25px;
+	background-repeat:no-repeat;
+	color:#FFFFFF;
+	font-size:20px;
+	/*padding-left:60px;*/
+	line-height:55px;	
+	font-weight:300;
+	letter-spacing:1px;
+}
+
 .page-sidebar-scroll{
 	z-index:2;
 	width:294px;
@@ -50,7 +89,7 @@
 .sidebar-shortcuts{
 	background-color:#0489B1;
 	height:50px;	
-	border-bottom:solid 1px #2a2a2a;
+	border-bottom:solid 1px #0489B1;
 }
 
 .sidebar-shortcuts a{
@@ -81,10 +120,20 @@
 	width:160px;
 }
 
+.header-logo{
+    font-family:'LilyUPC', sans-serif;
+  	color:#FFFFFF;
+	display:block;
+	text-align:center;
+	font-size:36px;
+	font-style:normal;
+	line-height:50px;
+}
+
 .sidebar-breadcrumb{
 	border-top:solid 1px rgba(255,255,255,0.05);
 	border-bottom:solid 1px rgba(255,255,255,0.05);
-	background-color:#1a1a1a;
+	background-color:#0489B1;
 	font-size:10px;
 	padding-top:5px;
 	padding-bottom:5px;
@@ -113,7 +162,7 @@
 .nav-item i:first-child{
 	position:absolute;
 	left:30px;
-	font-size:14px;
+	font-size:18px;
 	margin-top:21px;	
 	opacity:0.6;
 }
@@ -666,3 +715,8 @@
     }
 
 
+.span-stars
+{
+    color:gold;
+    font-size:14px;	
+}
