--- a/www/styles/framework.css
+++ b/www/styles/framework.css
@@ -7,6 +7,7 @@
 @import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900,200italic,300italic,400italic,600italic,700italic,900italic);
 @import url(http://fonts.googleapis.com/css?family=Lato:400,700,900);
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900);
+
 /* CSS Document */
 
 
@@ -1351,6 +1352,36 @@ table tr:hover td{
 	margin-top:10px;
 	margin-bottom:10px;
 	font-weight:500;
+    
+}
+
+
+.static-notification-white{
+	overflow:hidden;
+	background-color: white;
+	color:#FFFFFF;
+    border-radius:10px;
+	margin-bottom:30px;
+   
+}
+
+.static-notification-white p{
+	margin-top:10px;
+	margin-bottom:10px;
+	font-weight:500;
+   color:black;
+    
+}
+   
+.big-notification h4{
+	font-family:'Dosis', sans-serif;
+	font-weight:400;
+	color:#1f1f1f;
+	margin-bottom:5px;
+	margin:10px;
+	padding-bottom:10px;
+	padding-top:0px;
+	border-bottom:solid 1px rgba(255,255,255,0.2);
 }
 
 /*////*/
@@ -1793,7 +1824,13 @@ table tr:hover td{
 }
 
 .contact-text{
-     font-size:15px;
+    font-size:15px;
+	color:#666;
+	height:25px;
+	display:block;
+}
+.busca-text{
+    font-size:14px;
 	color:#666;
 	height:25px;
 	display:block;
