--- a/www/styles/style.css
+++ b/www/styles/style.css
@@ -121,7 +121,7 @@
 }
 
 .header-logo{
-    font-family:LilyUPC, sans-serif;
+    font-family:'LilyUPC', sans-serif;
   	color:#FFFFFF;
 	display:block;
 	text-align:center;
