--- a/www/styles/framework.css
+++ b/www/styles/framework.css
@@ -351,8 +351,8 @@ a{
 	position:absolute;
 	left:50%; 
 	top:50%; 
-	background-image:url(../images/status.gif); 
-	background-size:32px 32px;
+	background-image:url(../img/LOGO_eXCHANGE_AZUL.png); 
+	background-size: 128px 70px;
 	background-repeat:no-repeat;
 	background-position:center;
 	margin:-125px 0 0 -125px; 
