--- a/www/styles/framework.css
+++ b/www/styles/framework.css
@@ -1810,6 +1810,7 @@ table tr:hover td{
 
 .contactField{
 	height:40px;
+    max-width:100px;
 	padding-left:10px;
 	padding-right:10px;
 	margin-bottom:10px;
