--- a/www/styles/style.css
+++ b/www/styles/style.css
@@ -16,7 +16,7 @@
 	background-color:#0489B1;
 	z-index:10;
 	display:block;
-	min-height:1000px;
+	/*min-height:568px;*/
 }
 
 .page-content-wrapper{
