--- a/www/styles/framework.css
+++ b/www/styles/framework.css
@@ -68,7 +68,7 @@ input select{
 }
 
 p {
-	line-height: 30px;
+	/*line-height: 30px;*/
 	margin-bottom: 30px;
 	font-size:13px;
 	letter-spacing:0px;
@@ -1341,6 +1341,37 @@ table tr:hover td{
 	font-weight:500;
 }
 
+.static-notification-exchange{
+	overflow:hidden;
+	background-color:#0489B1;
+	color: #0489B1;
+	border-radius:10px;
+	margin-bottom: 10px;
+}
+
+.static-notification-exchange p{
+	margin-top:5px;
+	margin-bottom:5px;
+	font-weight:500;
+    line-height: 30px;
+   
+}
+
+.static-notification-exchange-login{
+	overflow:hidden;
+	background-color:white;
+	color:#0489B1;
+    border-radius:10px;
+	margin-bottom: 10px;
+}
+
+.static-notification-exchange-login p{
+	margin-top:5px;
+	margin-bottom:5px;
+	font-weight:500;
+    line-height: 30px;
+}
+
 .static-notification-green{
 	overflow:hidden;
 	background-color:#27ae60;
@@ -1392,8 +1423,8 @@ table tr:hover td{
 }
 
 .static-notification-white p{
-	margin-top:10px;
-	margin-bottom:10px;
+	margin-top:5px;
+	margin-bottom:5px;
 	font-weight:500;
    color:black;
     
@@ -1838,6 +1869,20 @@ table tr:hover td{
 	}
 }
 
+
+.label-exchange{
+	opacity:1.0;
+	background-position:20px 15px;
+	background-size:25px 25px;
+	background-repeat:no-repeat;
+	color:#FFFFFF;
+	font-size:15px;
+	/*padding-left:30px;*/
+	line-height: 20px;	
+	font-weight:300;
+	letter-spacing:1px;
+}
+
 .contact-call{
      font-size:15px;
 	color:#666;
@@ -1857,6 +1902,13 @@ table tr:hover td{
 	height:25px;
 	display:block;
 }
+.base-text{
+    font-size:10px;
+	color:#666;
+	height:25px;
+	display:block;
+}
+
 .busca-text{
     font-size:14px;
 	color:#666;
@@ -2013,7 +2065,6 @@ table tr:hover td{
 	font-style:normal;	
 	color:#666;
 }
-
 
 
 
