--- a/www/styles/framework.css
+++ b/www/styles/framework.css
@@ -358,8 +358,8 @@ a{
 	position:absolute;
 	left:50%; 
 	top:50%; 
-	background-image:url(../img/LOGO_eXCHANGE_AZUL.png); 
-	background-size: 128px 70px;
+	background-image:url('../img/ICONE eXCHANGE AZUL.png'); 
+	background-size: 128px 128px;
 	background-repeat:no-repeat;
 	background-position:center;
 	margin:-125px 0 0 -125px; 
