--- a/www/styles/style.css
+++ b/www/styles/style.css
@@ -246,6 +246,20 @@
 
 
 
+.nav-item-modal{
+	opacity:1.0;
+	background-position:20px 15px;
+	background-size:25px 25px;
+	background-repeat:no-repeat;
+	color: #0489B1;
+	font-size:15px;
+    padding-left: 20px;
+	line-height:55px;
+	font-weight:300;
+	letter-spacing:1px;
+}
+
+
 /*////////*/
 /*Homepage*/
 /*////////*/
@@ -267,6 +281,16 @@
 	z-index:99999;
 	position:fixed;
 	height:51px;
+	width:100%;
+     background-color:#0489B1;
+	/*background-image:url(../images/misc/menu-bg.png);*/
+	margin-bottom:30px;
+}
+
+.header-busca{
+	z-index:99999;
+	position:fixed;
+	height:100px;
 	width:100%;
      background-color:#0489B1;
 	/*background-image:url(../images/misc/menu-bg.png);*/
