--- a/www/styles/framework.css
+++ b/www/styles/framework.css
@@ -112,9 +112,9 @@ h1 > a, h2 > a, h3 > a, h4 > a, h5 > a, h6 > a {
 table {
 	border-collapse: separate;
 	border-spacing: 0;
-	background-color: #f6f6f6;
+	/*background-color: #f6f6f6;
 	border-left: 1px solid #e9e9e9;
-	border-top: 1px solid #e9e9e9;
+	border-top: 1px solid #e9e9e9;*/
 	width: 100%;
 	clear: both;
 	margin-bottom: 27px;
@@ -135,7 +135,7 @@ tr {
 	line-height: 18px;
 }
 
-td {
+/*td {
 	border-right: 1px solid #e9e9e9;
 	border-bottom: 1px solid #e9e9e9;
 	text-align: center;
@@ -145,7 +145,34 @@ td {
 	line-height: 18px;
 	vertical-align: middle;
 	background-color: #fdfdfd;
+}*/
+
+/*.td {*/
+	/* border-collapse: separate; */
+	/* border-spacing: 0; */
+	/* background-color: #f6f6f6; */
+	/* border-left: 1px solid #e9e9e9; */
+	/* border-top: 1px solid #e9e9e9; */
+	/*width: 100%;*/
+	/* clear: both; */
+	/*margin-bottom: 27px;*/
+/*}*/
+
+
+td {
+	/* border-right: 1px solid #e9e9e9; */
+	/*border-bottom: 1px solid #e9e9e9;*/
+	text-align: left;
+	/*color: #666;*/
+	padding-top: 3px;
+	padding-bottom: 3px;
+	line-height: 18px;
+	vertical-align: middle;
+	/* background-color: #fdfdfd; */
 }
+
+
+
 
 tr:hover > td {
 	background: #fff;
@@ -182,6 +209,51 @@ body{
 .checkbox{
 	color:#666;
 }
+.onoffswitch {
+    position: relative; width: 90px;
+    -webkit-user-select:none; -moz-user-select:none; -ms-user-select: none;
+}
+.onoffswitch-checkbox {
+    display: none;
+}
+.onoffswitch-label {
+    display: block; overflow: hidden; cursor: pointer;
+    border: 2px solid #999999; border-radius: 20px;
+}
+.onoffswitch-inner {
+    display: block; width: 200%; margin-left: -100%;
+    transition: margin 0.3s ease-in 0s;
+}
+.onoffswitch-inner:before, .onoffswitch-inner:after {
+    display: block; float: left; width: 50%; height: 30px; padding: 0; line-height: 30px;
+    font-size: 14px; color: white; font-family: Trebuchet, Arial, sans-serif; font-weight: bold;
+    box-sizing: border-box;
+}
+.onoffswitch-inner:before {
+    content: "SIM";
+    padding-left: 10px;
+    background-color: #34A7C1; color: #FFFFFF;
+}
+.onoffswitch-inner:after {
+    content: "NÃO";
+    padding-right: 10px;
+    background-color: #EEEEEE; color: #999999;
+    text-align: right;
+}
+.onoffswitch-switch {
+    display: block; width: 18px; margin: 6px;
+    background: #FFFFFF;
+    position: absolute; top: 0; bottom: 0;
+    right: 56px;
+    border: 2px solid #999999; border-radius: 20px;
+    transition: all 0.3s ease-in 0s; 
+}
+.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-inner {
+    margin-left: 0;
+}
+.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
+    right: 0px; 
+} 
 
 h1{
 	font-size:21px;
@@ -907,9 +979,9 @@ a{
 
 table {
 	font-size:12px;
-	text-shadow: 1px 1px 0px #fff;
-	background:#eaebec;
-	border:#ccc 1px solid;
+	/*text-shadow: 1px 1px 0px #fff;*/
+	/*background:#eaebec;
+	border:#ccc 1px solid;*/
 	margin-bottom:25px;
 }
 
@@ -936,9 +1008,9 @@ table tr td:first-child{
 
 table tr td {
 	padding:14px;
-	border-top: 1px solid #ffffff;
+	/*border-top: 1px solid #ffffff;
 	border-bottom:1px solid #e0e0e0;
-	border-left: 0px solid #e0e0e0;
+	border-left: 0px solid #e0e0e0;*/
 }
 
 table tr.even td{
